# mnexus

./: .gitmodules  CMakeLists.txt  LICENSE-MIT  README.md
.claude/skills/spv-to-header/: SKILL.md
.github/: copilot-instructions.md
doc/: memo_emscripten_asyncify.md
natvis/: mnexus.natvis
src/mnexus/private/: mnexus.cpp  mnexus_c.cpp  types.cpp
src/mnexus/private/backend-iface/: backend-iface.h
src/mnexus/private/backend-vulkan/: backend-vulkan-buffer.cpp  backend-vulkan-buffer.h  backend-vulkan-command_list.cpp  backend-vulkan-command_list.h  backend-vulkan-compute_pipeline.cpp  backend-vulkan-compute_pipeline.h  backend-vulkan-shader.cpp  backend-vulkan-shader.h  backend-vulkan-texture.cpp  backend-vulkan-texture.h  backend-vulkan.cpp  backend-vulkan.h  command_encoder.cpp  command_encoder.h  descriptor_set_allocator.cpp  descriptor_set_allocator.h  descriptor_set_binder.cpp  descriptor_set_binder.h  descriptor_set_write.cpp  image_layout_tracker.cpp  image_layout_tracker.h  pending_pipeline_barrier.cpp  pending_pipeline_barrier.h  resource_storage.cpp  resource_storage.h  shader_module.cpp  shader_module.h  thread_command_pool.cpp  thread_command_pool.h  types_bridge.cpp  vk-device.cpp  vk-device.h  vk-instance.cpp  vk-instance.h  vk-object-image.h  vk-object.h  vk-physical_device.cpp  vk-physical_device.h  vk-staging.cpp  vk-staging.h  (+2 more)
src/mnexus/private/backend-vulkan/command/: command_encoder.cpp  command_encoder.h  image_layout_tracker.cpp  image_layout_tracker.h  pending_pipeline_barrier.cpp
src/mnexus/private/backend-vulkan/depend/: vulkan.h  vulkan_fwd.h  vulkan_vma.cpp  vulkan_vma.h
src/mnexus/private/backend-vulkan/descriptor/: descriptor_set_allocator.cpp  descriptor_set_allocator.h  descriptor_set_binder.cpp  descriptor_set_binder.h  descriptor_set_write.cpp  descriptor_set_write.h
src/mnexus/private/backend-vulkan/device/: thread_command_pool.cpp  vk-device.cpp  vk-instance.cpp  vk-physical_device.cpp  vk-physical_device.h  vk-staging.cpp  vk-staging.h
src/mnexus/private/backend-vulkan/object/: vk-deferred_destroyer.h  vk-object-buffer.h  vk-object-compute_pipeline.h  vk-object-descriptor_set.h  vk-object-descriptor_set_layout.h  vk-object-image.h  vk-object-pipeline_layout.h  vk-object-sampler.h  vk-object-shader_module.h  vk-object.h
src/mnexus/private/backend-vulkan/resource/: resource_storage.cpp  shader_module.cpp  types_bridge.cpp  types_bridge.h
src/mnexus/private/backend-vulkan/wsi/: vk-wsi_surface.cpp  vk-wsi_surface.h
src/mnexus/private/backend-webgpu/: backend-webgpu-binding.cpp  backend-webgpu-binding.h  backend-webgpu-buffer.cpp  backend-webgpu-buffer.h  backend-webgpu-command_list.cpp  backend-webgpu-command_list.h  backend-webgpu-compute_pipeline.cpp  backend-webgpu-compute_pipeline.h  backend-webgpu-layout.cpp  backend-webgpu-layout.h  backend-webgpu-render_pipeline.cpp  backend-webgpu-render_pipeline.h  backend-webgpu-sampler.h  backend-webgpu-shader.cpp  backend-webgpu-shader.h  backend-webgpu-texture.cpp  backend-webgpu-texture.h  backend-webgpu.cpp  backend-webgpu.h  blit_texture.cpp  blit_texture.h  buffer_row_repack.cpp  buffer_row_repack.h  builtin_shader.cpp  builtin_shader.h  include_dawn.h  shader_module.cpp  shader_module.h  types_bridge.cpp  types_bridge.h  webgpu_cpp_print.h  webgpu_format.h
src/mnexus/private/binding/: cache_key.h  state_tracker.cpp  state_tracker.h
src/mnexus/private/builtin_shader/: blit_2d_color.slang  blit_2d_color.spv  blit_2d_color_spv.h  blit_texture_2d.slang  blit_texture_2d.spv  blit_texture_2d_spv.h  buffer_repack_rows.slang  buffer_repack_rows.spv  buffer_repack_rows_spv.h  full_screen_quad.slang  full_screen_quad.spv  full_screen_quad_spv.h
src/mnexus/private/container/: generational_pool.h  resource_generational_pool.h
src/mnexus/private/impl/: impl_macros.h
src/mnexus/private/pipeline/: pipeline_layout_cache.h  pipeline_layout_cache_key.cpp  pipeline_layout_cache_key.h  render_pipeline_cache.h  render_pipeline_cache_key.cpp  render_pipeline_cache_key.h  render_pipeline_diagnostics.h  render_pipeline_fixed_function.h  render_pipeline_state_tracker.cpp  render_pipeline_state_tracker.h  render_state_event_log.cpp
src/mnexus/private/resource_pool/: generational_pool.h  resource_generational_pool.h
src/mnexus/private/shader/: reflection.cpp  reflection.h  wgsl.cpp  wgsl.h
src/mnexus/private/sync/: resource_sync.cpp  resource_sync.h
src/mnexus/public/: mnexus.h  render_pipeline_state_snapshot.h  render_state_event_log.h  types.h
src/mnexus/public/container/: array_proxy.h
tests/: CMakeLists.txt
tests/harness/: CMakeLists.txt  mnexus_test_harness.c  mnexus_test_harness.h
tests/test-capi-headless-info/: CMakeLists.txt  main.c
tests/test-capi-headless-triangle/: CMakeLists.txt  main.c  triangle_test_fs_spv.h  triangle_test_vs_spv.h
tests/test-headless-info/: CMakeLists.txt  main.cpp
tests/test-headless-triangle/: CMakeLists.txt  main.cpp  triangle_test_fs_spv.h  triangle_test_vs_spv.h
